Test/errors/err_unknown_type_arg_qualifier.cb
// `unique` is the only admitted generic type-argument qualifier.
import "list.cb";
class Res { int id = default; };

expect_error("unknown type qualifier 'borrow'; only 'unique' is allowed") {
    list<borrow Res*> bad = default;
}
